<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ui"
            android:icon="@drawable/ic_menu_ui"
            android:title="@string/menu_ui"/>
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_menu_file"
            android:title="@string/menu_date"/>
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_audio"/>
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo"/>
        <item
            android:id="@+id/nav_components"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_components"/>
        <item
            android:id="@+id/nav_communication"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_communication"/>


    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/nav_sensor"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_sensor"/>
        </menu>
    </item>

</menu>
